# bad-shell

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  bad_window_manager_policy.cpp  bad_window_manager_policy.h  main.cpp
